--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,7 @@ blogger_url: # your blogger URL
 work_url: # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
+dblp_url: # your DBLP profile url
 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
