--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,7 @@ work_url: # work page URL
 keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
+stackoverflow_id: #your stackoverflow id
 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
