Add RSS icon to social.html (#418)
* Add rss icon

* Add a blank line to make sure rss icon is always at the last

--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,8 @@ wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
+rss_icon: true
+
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
 
