--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,8 @@ impressum_path:  # set to path to include impressum link in the footer, use the 
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
+rss_icon: true
+
 # -----------------------------------------------------------------------------
 # Layout
 # -----------------------------------------------------------------------------
@@ -68,8 +70,6 @@ keybase_username: # your keybase user name
 wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
-
-rss_icon: true
 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
@@ -238,7 +238,7 @@ imagemagick:
     - 800
     - 1400
   input_directories:
-    - assets/img
+    - assets/img/
   input_formats:
     - ".jpg"
     - ".jpeg"
