--- a/_config.yml
+++ b/_config.yml
@@ -237,6 +237,7 @@ scholar:
 
   query: "@*"
 
+filtered_bibtex_keywords: [abbr, abstract, arxiv, bibtex_show, html, pdf, selected, supp, blog, code, poster, slides, website] # Filter out certain bibtex entry keywords used internally from the bib output
 
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
