Adds support for tag-list (#734)
* Adds support for tag-list

* Update _sass/_base.scss

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

* Made tags optional

* Responsive deign for tag-list

Co-authored-by: Maruan <alshedivat@users.noreply.github.com>

--- a/_config.yml
+++ b/_config.yml
@@ -203,6 +203,8 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
+display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will be dispalyed on the front page of your blog
+
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
 # -----------------------------------------------------------------------------
