Optimize image qualities and a fix (#762)
* blog tag-list

* optimize publication preview

* better compression

* optimize jpg project images

* reduce sizes of project images

* fix

--- a/_config.yml
+++ b/_config.yml
@@ -258,7 +258,7 @@ imagemagick:
     - ".png"
     - ".tiff"
   output_formats:
-    webp: "-quality 75%"
+    webp: "-resize 800x"
 
 # -----------------------------------------------------------------------------
 # Jekyll Diagrams
