--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -11,7 +11,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    if: github.repository_owner == 'alshedivat'
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v2
