Adds support for repositories (#760)
* Add support for github repo cards

* add support for dark theme

* Add support for custom theme

* repositories

* fix

* make it simpler

* spcaing

* responsive fix

* adds support for usernames

* make it modular

* fix

* show icons

* cache_seconds

* fix

* Revert "cache_seconds"

This reverts commit a9dd4d5d43d212676e1c1dba8ec8086c7fdb7cd7.

* add last line

* fix

* github only

* fix

* Add instructions

* Add `README.md` instructions

* Add `nav_order`

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,18 @@ last_updated: false # set to true if you want to display last updated in the foo
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
+# Theme
+# -----------------------------------------------------------------------------
+
+# code highlighter theme
+highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
+
+# repo color theme
+repo_theme_light: default       # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-stats/blob/master/themes/README.md
+
+# -----------------------------------------------------------------------------
 # RSS Feed
 # -----------------------------------------------------------------------------
 # will use title and url fields
@@ -133,8 +145,6 @@ news_limit: 5 # leave blank to include all the news in the `_news` folder
 # Markdown and syntax highlight
 markdown: kramdown
 highlighter: rouge
-highlight_theme_light: github  # https://github.com/jwarby/jekyll-pygments-themes
-highlight_theme_dark: native  # https://github.com/jwarby/jekyll-pygments-themes
 kramdown:
   input: GFM
   syntax_highlighter_opts:
