Adds support for GA4 Google Analytics (#727)
* Update `analytics.html`

* Update `config.yml`

* Update

* Update

--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ contact_note: >
 # Analytics and search engine verification
 # -----------------------------------------------------------------------------
 
-google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
+google_analytics:  # your Goole Analytics measurement ID (format: G-XXXXXXXXXX)
 panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 
 google_site_verification:  # your google-site-verification ID (Google Search Console)
