--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,8 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: # your Twitter handle
+mastodon_username: # your mastodon username
+mastodon_instance: # your mastodon instance
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
