Added RadarConf IEEE url; Added TAP paper; Fixed name underline in bib

--- a/_config.yml
+++ b/_config.yml
@@ -270,7 +270,7 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # these tags wil
 scholar:
 
   last_name: [Merlo]
-  first_name: [Jason, M.]
+  first_name: [Jason M.]
 
   style: ieee
   locale: en
