--- a/.prettierignore
+++ b/.prettierignore
@@ -4,3 +4,5 @@ assets/css/main.scss
 assets/plotly/demo.html
 lighthouse_results/**
 _posts/2015-10-20-math.md
+assets/js/distillpub/template.v2.js
+website.code-workspace
