--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Setup Node.js ⚙️
         uses: actions/setup-node@v4
       - name: Install Prettier 💾
