--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -33,3 +33,6 @@
   url: https://www.ursi.org/events.php?filter=gass
 # "IEEE AP-S/URSI":
 #   url:
+
+"IEEE PAST":
+  url: https://www.ieee-array.org
