--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -11,6 +11,9 @@
 "IEEE MWCL":
   url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9944983
 
+"IEEE TCOMM":
+  url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=26
+
 "IEEE IMS":
   url: https://ims-ieee.org
 
