--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -11,7 +11,7 @@
 "IEEE MWCL":
   url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9944983
 
-"IEEE TCOMM":
+"IEEE TCOM":
   url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=26
 
 "IEEE IMS":
