Updated site description

--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@
 
 title: Jason Merlo
 first_name: Jason
-middle_name: M.
+middle_name: Michael
 last_name: Merlo
 email: jason [@] merlo [dot] io
 description: >
-  Jason Merlo | PhD Student at Michigan State University studying Radar Systems
+  Jason Merlo | Researcher at Michigan State University studying Radar Systems
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on the <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
