Updated environment to add formatter

--- a/pixi.toml
+++ b/pixi.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 install_bundler = { cmd = ["gem", "install", "bundler"] }
 install = {depends-on = ['install_bundler'], cmd = ["bundler", "install"]}
 serve = {depends-on = ['install'], cmd = ["bundle", "exec", "jekyll", "serve"]}
+format = {depends-on = ['install'], cmd = ["prettier", ".", "--write"]}
 
 [dependencies]
 ruby = ">=3.4.7,<4"
@@ -15,3 +16,5 @@ c-compiler = ">=1.11.0,<2"
 compilers = ">=1.11.0,<2"
 cxx-compiler = ">=1.11.0,<2"
 imagemagick = ">=7.1.2_10,<8"
+prettier = ">=3.7.4,<4"
+npx = ">=0.1.1,<0.2"
